--- a/public/index.html
+++ b/public/index.html
@@ -231,21 +231,25 @@
               </div>
               <hr>
              <!-- <div class="barChart"> -->
-             <div  id="skills">
-              <h2>SKILLS</h2>
-              <h4>Programming</h4>
-              <div id="barchartProgramming"></div>
-              <h4>Framework</h4>
-              <div id="barchartFramework"></div>
-              <h4>Library</h4>
-              <div id="barchartLibrary"></div> 
-              <h4>Application</h4>
-              <div id="barchartApplication"></div>
-            </div>
+              <div  id="skills">
+                <h2>SKILLS</h2>
+                <h4>Programming</h4>
+                <div id="barchartProgramming"></div>
+                <h4>Framework</h4>
+                <div id="barchartFramework"></div>
+                <h4>Library</h4>
+                <div id="barchartLibrary"></div> 
+                <h4>Application</h4>
+                <div id="barchartApplication"></div>
+              </div>
+              <hr>
+               <div  id="more">
+                <h2>MORE</h2>
+              </div>
            </div>
           </div>
         </div>
-        <div class="col-lg-9" style="padding-left:2%">
+        <div class="col-lg-9" style="padding-left:5%">
           <div id="summary">
             <h2 class="text-center">SUMMARY</h2>
             <div class="h4 row text-primary">
