--- a/public/visualCode.html
+++ b/public/visualCode.html
@@ -191,13 +191,28 @@
                 <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                     <div class="flipper">
                         <div class="front" style="background-color: #ff9800;">
-                            <h3 style="">
+                            <h4 style="">
                                 <u> 496.Next Greater Element I Add to List</u>
                                     <br>
                                     You are given two arrays (without duplicates) nums1 and nums2 where nums1’s elements are subset of nums2. Find all the next greater numbers for nums1's elements in the corresponding places of nums2.
                                     <br>
                                     The Next Greater Number of a number x in nums1 is the first greater number to its right in nums2. If it does not exist, output -1 for this number.
-                            </h3>
+                                    <br>
+                                    Example 1:
+                                    <pre>
+Input: nums1 = [4,1,2], nums2 = [1,3,4,2].
+Output: [-1,3,-1]
+Explanation:
+    For number 4 in the first array,you cannot find the next 
+        greater number for it in the second array, so output -1.
+    For number 1 in the first array,the next greater number 
+        for it in the second array is 3.
+    For number 2 in the first array,there is no next greater 
+        number for it in the second array, so output -1.
+                                    </pre>
+
+
+                            </h4>
                         </div>
                         <div class="back">
                             <img src="../images/web-visualcode.jpg">
