--- a/public/visualCode.html
+++ b/public/visualCode.html
@@ -366,15 +366,16 @@ Explanation:
           <div class="modal-footer">
               <div class="row">
                   <label class="col-lg-1 label-lg">Input</label>
-                  <span class="col-lg-11">
+                  <span class="col-lg-8">
                      <input id="inputQuestion2" type="text" class="form-control row" placeholder="String" aria-describedby="basic-addon1" value="A man, a plan, a canal: Panama">
                   </span>
+                  <button id="btnRunQuestion2" class="btn btn-primary col-lg-3">Run</button>
               </div>
-              <div class="row" style="margin-top:1%">
+     <!--          <div class="row" style="margin-top:1%">
                   <label class="col-lg-1 label-lg">Result</label>
                   <span id="txtResultQuestion2" class="bg-success col-lg-7 btn">&nbsp;</span>
                   <button id="btnRunQuestion2" class="btn btn-primary col-lg-3">Run</button>
-              </div>
+              </div> -->
               <hr>
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
