--- a/public/index.html
+++ b/public/index.html
@@ -254,7 +254,10 @@
             <h2 class="text-center">SUMMARY</h2>
             <div class="h4 row text-primary">
               <ul class="list-group">
-                <li class="list-group-item">To secure a position in software development where I can contribute my skills and abilities to the growth of the organization and build tech solutions for business and people to make life more efficient
+                <li class="list-group-item">Actively seeking a full time position in software development where I can contribute my skills and abilities to the growth of organization
+                </li>
+                <li>
+                Passionate about building tech solutions for business to make work more efficient and for people to make life easier
                 </li>
                 <li class="list-group-item">Critical thinking, love to solve problems, with innovative ideas, willing to accept challenge every day.</li>
                 <li class="list-group-item">Solid understanding of data structure, algorithms, OOP, and modern design patterns.</li>
@@ -688,7 +691,7 @@
             <!-- /.row -->
             <hr>
             <div id="timeline">
-            <h1 class="text-center">TIMELINE</h1>
+              <h1 class="text-center">TIMELINE</h1>
             </div>
         </div>
       </div>   <!-- /.row -->
@@ -709,12 +712,11 @@
         <!-- /.container -->
 
         <!-- jQuery -->
-        <script src="js/jquery.js"></script>
+        <!-- <script src="js/jquery.js"></script>
 
-        <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
-
-
+        Bootstrap Core JavaScript
+        <script src="js/bootstrap.min.js"></script> -->
+  
 
   </body>
 </html>
