--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="#about">About Me</a></li>
+            <li><a href="#about">Me</a></li>
             <li class="active"><a class="navbar-brand" href="#summary">SUMMARY</a></li>
             <li><a href="#skills">SKILLS</a></li>
             <li class="dropdown">
@@ -162,7 +162,7 @@
             <li><a href="#affliations">AFFILIATIONS</a></li>
             <li><a href="#resume">RESUME</a></li>
             <li><a href="#coverletter">COVER LETTER</a></li>
-            <li><a href="#more">MORE</a></li>
+            <li><a href="#more">MORE ABOUT ME</a></li>
           </ul>
         </div>
       </div>
@@ -231,8 +231,22 @@
               </div>
               <hr>
              <!-- <div class="barChart"> -->
-              <div id="skills">
+              <div id="skills" >
                 <h2>SKILLS</h2>
+                <div style="font-size:1.8vw;margin:1%">
+                  <span class="label label-default">Software Development</span>
+                  <span class="label label-default">OOP</span>
+                  <span class="label label-default">SDLC</span>
+                  <span class="label label-default">MVC</span>
+                  <span class="label label-default">TDD</span>
+                  <span class="label label-default">Python</span>
+                  <span class="label label-default">PHP</span>
+                  <span class="label label-default">jQuery</span>
+                  <span class="label label-default">SQL</span>
+                  <span class="label label-default">Java</span>
+                  <span class="label label-default">C++</span>
+                </div>
+                <br>
                 <h4>Programming</h4>
                 <div id="barchartProgramming"></div>
                 <h4>Framework</h4>
@@ -243,9 +257,9 @@
                 <div id="barchartApplication"></div>
               </div>
               <hr>
-               <div  id="more">
+            <!--    <div id="more">
                 <h2>MORE</h2>
-              </div>
+              </div> -->
            </div>
           </div>
         </div>
@@ -272,7 +286,7 @@
             </div>
           </div>
           <hr>
-          <div id="projects">
+          <div id="projects" class="">
             <h2 class="text-center">PROJECTS</h2>
             <hr>
             <hr>
@@ -390,7 +404,7 @@
                       <img src="./images/fw-boostrap.png">
                     </div>
                     <br>
-                    <a href="#">
+                    <a href="/visualcode.html">
                         <img class="img-responsive" src="./images/web-visualcode.jpg" alt="">
                     </a>
                 </div>
@@ -573,7 +587,7 @@
                     <img src="./images/fw-boostrap.png">
                   </div>
                   <br>
-                  <a href="">
+                  <a href="http://www.marketingunbox.com" target="_blank" >
                     <img class="img-responsive" src="./images/web-dreamgo.jpg" alt="" style="">
                   </a>
                 </div>
@@ -586,7 +600,7 @@
                     </ul>
                   <p></p>
                   <div class="btn-group">
-                    <a class="btn" href="https://github.com/susanjiang03/dreamgo">
+                    <a class="btn" href="https://github.com/susanjiang03/dreamgo" target="_blank">
                       <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
                     </a>
                     <a class="btn btn-primary" href="http://www.marketingunbox.com">View <i class="fa fa-external-link" target="_blank" aria-hidden="true"></i></a>
@@ -622,7 +636,7 @@
                       <li>Produced interactive visualization web application of the clusters map with JavaScript D3 library </li>
                     </ul>
                     <div class="btn-group">
-                      <a class="btn" href="https://github.com/susanjiang03/Terrestrial_Hydrology_Visualization">
+                      <a class="btn" href="https://github.com/susanjiang03/Terrestrial_Hydrology_Visualization" target="_blank" >
                         <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
                       </a>
                       <a class="btn btn-primary" href="https://terrestrial-hydrology-viz.herokuapp.com">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(compatible in Safari)
@@ -687,7 +701,7 @@
                     <li>Implemented a pipeline monitor to monitor the process of generating data and a dashboard to visualize the result</li>
                   </ul>
                   <div class="btn-group">
-                    <a class="btn" href="https://github.com/susanjiang03/EbookSharing"><i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                    <a class="btn" href="https://github.com/susanjiang03/EbookSharing" target="_blank" ><i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
                     </a>
                     <a class="btn btn-primary disabled" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                   </div>
@@ -708,10 +722,14 @@
               <object data="/data/Coverletter_Susan_Jiang_03232017.pdf" type="application/pdf" width="100%" height="100%"></object>
             </div>
             <div id="coverletter">
-              <h1 class="text-center">MORE</h1>
+              <h1 class="text-center">MORE ABOUT ME</h1>
               <div>
-              Idols: 
+               Goals:
+              <br>
+              Idols
+              <br>
               Readings: 
+              <br>
               Hobbies:
               </div>
             </div>
