--- a/public/index.html
+++ b/public/index.html
@@ -643,11 +643,11 @@
             </div>
             <div id="resume">
               <h1 class="text-center">RESUME</h1>
-              <object data="/data/Resume_Susan_Jiang_03232017.pdf" type="application/pdf" width="100%" height="100%"></object>
+              <object data="/data/Resume_Susan_Jiang_03242017.pdf" type="application/pdf" width="100%" height="100%"></object>
             </div>
             <div id="coverletter">
               <h1 class="text-center">COVER LETTER</h1>
-              <object data="/data/Coverletter_Susan_Jiang_03242017.pdf" type="application/pdf" width="100%" height="100%"></object>
+             <!--  <object data="/data/Coverletter_Susan_Jiang_03242017.pdf" type="application/pdf" width="100%" height="100%"></object> -->
             </div>      
         </div>
       </div>   <!-- /.row -->
