--- a/public/index.html
+++ b/public/index.html
@@ -384,7 +384,7 @@
                         </div>
                         
                         <div class="item active">
-                          <img src="./images/web-mc.jpg">
+                          <img src="./images/web-mc.png">
                         </div>
 
                         <div class="item">
